--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "env-to-config": "^1.3.2",
     "fastify": "^3.9.2",
     "form-data": "^3.0.0",
     "request": "^2.88.2"
