add scp example

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,8 @@ HTTP_RECEIVER_URL=http://localhost:3000
 
 TCP_RECEIVER_HOST=localhost
 TCP_RECEIVER_PORT=3001
+
+SCP_HOST=localhost
+SCP_USER=user
+SCP_PWD=pwd
+SCP_RECEIVER_PATH=/path/to/destination
