--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "env-to-config": "^1.3.2",
     "fastify": "^3.9.2",
     "form-data": "^3.0.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "scp2": "^0.5.0"
   }
 }
